# CryptoEng_W2526

FinalProject/Secure_Remote_Access_Protocol/: Cargo.toml
FinalProject/Secure_Remote_Access_Protocol/src/: alice.rs  google.rs  main.rs
FinalProject/Secure_Remote_Access_Protocol/src/client/: alice.rs  mod.rs
FinalProject/Secure_Remote_Access_Protocol/src/crypto/: key_schedule.rs  participant.rs
FinalProject/Secure_Remote_Access_Protocol/src/server/: google.rs
FinalProject/Secure_Remote_Access_Protocol/src/tests/: test.rs
Homework_2/Comparison/: Cargo.toml  README.md
Homework_2/Comparison/src/: main.rs
Homework_2/KEM-TLS/: Cargo.toml
Homework_2/KEM-TLS/src/: main.rs
Homework_2/KEM-TLS/src/crypto/: mod.rs  participant.rs
Homework_2/PQ-TLS/: Cargo.toml
Homework_2/PQ-TLS/src/: ecdsa.rs  graph.rs  key_schedule.rs  main.rs  participant.rs
Homework_2/PQ-TLS/src/crypto/: graph.rs  key_schedule.rs  participant.rs
Homework_2/kem-tls/: Cargo.toml
Homework_2/kem-tls/src/: lib.rs  main.rs
Homework_2/kem-tls/src/crypto/: mod.rs  participant.rs
Homework_2/pq-tls/: Cargo.toml
Homework_2/pq-tls/src/: lib.rs  main.rs
Homework_3/SCRAM/: analyze.md
Homework_3/offline-attack/: Cargo.toml
Homework_3/offline-attack/src/: main.rs
Homework_3/opaque/: Cargo.toml
Homework_3/opaque/src/: main.rs
Homework_3/opaque/src/crypto/: aead.rs  key_schedule.rs  mod.rs  participant.rs
