[package]
name = "PQ-TLS"
version = "0.1.0"
edition = "2024"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22.1"
aes = "0.8.4"
ctr = "0.9.2"
image = "0.25.9"
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2"
ml-kem = "0.1"
sec1 = "0.8.0-rc.10"
k256 = { version = "0.13", features = ["arithmetic"] }
hex = "0.4"
anyhow = "1.0"
rand_core = "0.9.3"
crypto-bigint = "0.5"
kem = "0.3.0-pre.0"
sha3 = "0.10.8"
