[package]
name = "PQ-TLS"
version = "0.1.0"
edition = "2024"

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
image = "0.25.9"
imageproc = "0.25.0"
ab_glyph = "0.2"
ml-kem = "0.1"
rand_core = "0.9.3"
crypto-bigint = "0.5"
kem = "0.3.0-pre.0"
sha3 = "0.10.8"
signature = "2.2.0"
ml-dsa = "0.1.0-rc.2"
aes-gcm = "0.10"
aead = "0.5"
