[package]
name = "opaque"
version = "0.1.0"
edition = "2024"

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9.2"
image = "0.25.9"
ml-kem = "0.2.2"
kem = "0.3.0-pre.0"
crypto-bigint = "0.6.1"
sha3 = "0.10.8"
signature = "2.2.0"
ml-dsa = "0.1.0-rc.2"
aes-gcm = "0.10"
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve"] }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }

